--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -530,6 +530,7 @@ nav:
     - "Technical Guide": "resources/technical-support-guide.md"
     - "Release Notes":
           - "AccuKnox" :
+            - "v3.3": "getting-started/3.3-release.md"
             - "v3.2" : "getting-started/3.2-release.md"
             - "v3.1" : "getting-started/3.1-release.md"
             - "v3.0" : "getting-started/3.0-release.md"
