--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,7 +179,6 @@ nav:
       - "Integrations Playbook" : "how-to/playbook-integrations.md"
     - "Enterprise Architecture" : "getting-started/accuknox-arch.md"
     # - "AccuKnox Agents" : "getting-started/accuknox-agents.md"
-    - "DevSecOps" : "getting-started/devsecops.md"
     - "Cloud Accounts":
       - "Overview": "how-to/high-level-onboarding.md"
       - "Prerequisites":
@@ -219,6 +218,7 @@ nav:
         - "PHP-MySQL": "getting-started/php-mysql.md"
     - "ASPM":
       - "Overview": "how-to/aspm-overview.md"
+      - "DevSecOps" : "getting-started/devsecops.md"
       - "Github IaC Scan": "how-to/github-iac-scan.md"
       - "AWS CDK IaC Scan": "how-to/aws-cdk-iac-scan.md"
     - "Container Registry":
@@ -234,10 +234,9 @@ nav:
       - "In-Cluster Scanner": "how-to/in-cluster-image-scan-helm.md"
     - "On-Premises":
         - "Overview": "getting-started/on-prem-overview.md"
-        - "On-premise Installation" : "getting-started/on-prem-installation-guide.md"
+        - "Installation Guide" : "getting-started/on-prem-installation-guide.md"
         - "Security on OpenShift": "getting-started/security-on-openshift.md"
-        - "Health Monitoring":
-          - "RINC": "how-to/RINC.md"
+        - "Health Monitoring (RINC)": "how-to/RINC.md"
     - "SBOM": "getting-started/sbom.md"
     - "CDR":
       - "AWS Onboarding": "getting-started/aws-cdr.md"
@@ -248,8 +247,6 @@ nav:
     - "Reports":
       - "Configure Custom Report": "how-to/custom-reports.md"
       - "Summarized Custom Report": "how-to/summarized-custom-reports.md"
-    - "Signup/Login via SSO": "how-to/sso.md"
-    - "Audit Trail Logs": "getting-started/audit-trail-logs.md"
     - "knoxctl":
       - "Overview": "knoxctl/index.md"
       - "Configuration": "knoxctl/knoxctl-config.md"
@@ -273,10 +270,13 @@ nav:
     - "API Security":
       - "Overview": "getting-started/api-overview.md"
       - "Traffic Connectors":
+        - "AWS API Gateway": "integrations/api-aws.md"
+        # - "Nginx Server": "integrations/api-nginx-server.md"
+        # - "Azure API Management": "getting-started/api-azure.md"
         - "Kubernetes":
-          - "Deploy SentryFlow": "getting-started/api-k8s.md"
-          - "Istio": "getting-started/api-istio.md"
-          - "Nginx": "getting-started/api-nginx.md"
+          - "API Proxy": "integrations/api-k8s.md"
+          - "Istio": "integrations/api-istio.md"
+          - "Nginx Ingress": "integrations/api-nginx.md"
     - "CI/CD":
         - "Overview": "integrations/cicd-overview.md"
         - "Azure DevOps":
@@ -288,7 +288,6 @@ nav:
           - "Iac Scan": "integrations/azure-iac.md"
           - "DAST": "integrations/azure-dast.md"
           - "Secret Scan": "integrations/azure-secret-scan.md"
-          # - "OpenGrep SAST": "integrations/azure-opengrep-sast.md"
         - "Google Cloud Build":
           - "Overview": "integrations/google-overview.md"
           - "SAST": "integrations/google-sast.md"
@@ -387,7 +386,9 @@ nav:
       - "Rsyslog Feeder Integration" : "integrations/rsyslog_feeder_integration.md"
       - "AWS Cloudwatch" : "integrations/aws-cloudwatch.md"
     - "SSO":
+      - "Signup/Login via SSO": "how-to/sso.md"
       - "Azure Entra": "integrations/azure-entra-sso.md"
+      # - "Okta": "integrations/okta-sso.md"
     - "Notification":
       - "Slack": "integrations/slack.md"
       - "Email": "integrations/email.md"
@@ -491,6 +492,7 @@ nav:
         - "Reporting":
             - "OnDemand and Scheduled" : "use-cases/vm-reporting.md"
             - "Host Scan Report" : "use-cases/vm-host-scan-report.md"
+    - "Event Trail Logs": "getting-started/audit-trail-logs.md"
     - "Access Keys": "use-cases/access-keys.md"
     - "IoT/Edge Security" : "use-cases/iot-edge-security.md"
     - "5G Security" : "use-cases/5g-security.md"
@@ -512,6 +514,7 @@ nav:
   - "Resources":
     - "Resources": "resources/index.md"
     - "Deployment Models": "getting-started/deployment-models.md"
+    # - "AI Usage Policy": "resources/ai-usage-policy.md"
     - "CWPP Troubleshooting": "resources/troubleshooting.md"
     - "CSPM Troubleshooting": "resources/cspm-troubleshooting.md"
     - "User Manual": "resources/accuknox-manual.md"
