improve aws api and sbom page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,9 +177,12 @@ nav:
       - "KSPM Playbook": "how-to/playbook-kspm.md"
       - "Host Security Playbook": "how-to/playbook-hostsec.md"
       - "Integrations Playbook" : "how-to/playbook-integrations.md"
-    - "Enterprise Architecture" : "getting-started/accuknox-arch.md"
-    # - "AccuKnox Agents" : "getting-started/accuknox-agents.md"
-    - "Cloud Accounts":
+    - "On-Premises":
+        - "Overview": "getting-started/on-prem-overview.md"
+        - "Installation Guide" : "getting-started/on-prem-installation-guide.md"
+        - "Security on OpenShift": "getting-started/security-on-openshift.md"
+        - "Health Monitoring (RINC)": "how-to/RINC.md"
+    - "Cloud Security (CSPM)":
       - "Overview": "how-to/high-level-onboarding.md"
       - "Prerequisites":
             - "AWS": "how-to/cspm-prereq-aws.md"
@@ -192,12 +195,12 @@ nav:
         - "GCP" : "how-to/gcp-onboarding.md"
         - "Oracle" : "how-to/oracle-onboarding.md"
         - "Offboard Cloud Account": "how-to/cloud-offboarding.md"
-    - "AI/ML Security":
+    - "AI/ML Security (AI-SPM)":
       - "Overview": "how-to/aiml-overview.md"
       - "AWS AI/ML Onboarding": "how-to/aiml-aws-onboard.md"
       - "Azure AI/ML Onboarding": "how-to/aiml-azure-onboard.md"
       - "GCP AI/ML Onboarding": "how-to/aiml-gcp-onboard.md"
-    - "Workloads":
+    - "Workload Security (CWPP)":
       - "Kubernetes":
         - "Onboarding Overview": "how-to/k8s-security-onboarding.md"
         - "Runtime Security Prerequisites": "getting-started/cwpp-prereq.md"
@@ -216,7 +219,7 @@ nav:
         - "WordPress-MySQL": "getting-started/wordpress-mysql.md"
         - "DVWA": "getting-started/dvwa.md"
         - "PHP-MySQL": "getting-started/php-mysql.md"
-    - "ASPM":
+    - "Application Security (ASPM)":
       - "Overview": "how-to/aspm-overview.md"
       - "DevSecOps" : "getting-started/devsecops.md"
       - "Github IaC Scan": "how-to/github-iac-scan.md"
@@ -232,22 +235,16 @@ nav:
       - "JFrog Container" : "how-to/jfrog-container.md"
       - "Quay": "how-to/quay.md"
       - "In-Cluster Scanner": "how-to/in-cluster-image-scan-helm.md"
-    - "On-Premises":
-        - "Overview": "getting-started/on-prem-overview.md"
-        - "Installation Guide" : "getting-started/on-prem-installation-guide.md"
-        - "Security on OpenShift": "getting-started/security-on-openshift.md"
-        - "Health Monitoring (RINC)": "how-to/RINC.md"
-    - "SBOM": "getting-started/sbom.md"
     - "CDR":
       - "AWS Onboarding": "getting-started/aws-cdr.md"
       - "GCP Onboarding": "getting-started/gcp-cdr.md"
       - "Azure Onboarding": "getting-started/azure-cdr.md"
-    - "Secrets Management":
-      - "Overview": "getting-started/secrets-management.md"
+    - "SBOM": "getting-started/sbom.md"
+    - "Secrets Management": "getting-started/secrets-management.md"
     - "Reports":
       - "Configure Custom Report": "how-to/custom-reports.md"
       - "Summarized Custom Report": "how-to/summarized-custom-reports.md"
-    - "knoxctl":
+    - "Knoxctl":
       - "Overview": "knoxctl/index.md"
       - "Configuration": "knoxctl/knoxctl-config.md"
       - "Commands": "knoxctl/knoxctl-commands.md"
@@ -393,7 +390,6 @@ nav:
       - "Slack": "integrations/slack.md"
       - "Email": "integrations/email.md"
       - "Webhook": "integrations/webhook-integration.md"
-    - "OAuth": "integrations/oauth.md"
     - "Email Backend" : "integrations/email-backend.md"
   - "Use-Cases":
     - "Use Cases": "use-cases/index.md"
@@ -513,7 +509,9 @@ nav:
 
   - "Resources":
     - "Resources": "resources/index.md"
+    - "Enterprise Architecture" : "getting-started/accuknox-arch.md"
     - "Deployment Models": "getting-started/deployment-models.md"
+    # - "AccuKnox Agents" : "getting-started/accuknox-agents.md"
     # - "AI Usage Policy": "resources/ai-usage-policy.md"
     - "CWPP Troubleshooting": "resources/troubleshooting.md"
     - "CSPM Troubleshooting": "resources/cspm-troubleshooting.md"
