--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -524,6 +524,7 @@ nav:
     - "Deployment Models": "getting-started/deployment-models.md"
     - "Multi-Tenancy Support": "resources/multitenancy.md"
     - "Asset Onboarding Deck": "https://docs.google.com/presentation/d/e/2PACX-1vSNns23fmwfVgaoBIvR1fL7fk_Be6GYUJLwRticjlm4cBvIAqzxm4IF7RV7qsV00KrrRFGDjOIVG0Q2/pub?start=false&loop=false&delayms=3000"
+    - "Compliance Baseline Data": "resources/compliance-baseline-data.md"
     # - "Data Usage Policy": "resources/data-usage-policy.md"  # ADD THESE BACK IN LATER
     # - "AccuKnox Agents" : "getting-started/accuknox-agents.md"
     # - "AI Usage Policy": "resources/ai-usage-policy.md"
