--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,7 @@ extra_css:
 - "assets/stylesheets/style.css"
 - "assets/stylesheets/extra.css"
 - "assets/stylesheets/neoteroi-mkdocs.css"
+- "assets/stylesheets/banner.css"
 extra_javascript:
   - javascripts/extra.js
 extra:
