--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -221,6 +221,13 @@ nav:
         - "WordPress-MySQL": "getting-started/wordpress-mysql.md"
         - "DVWA": "getting-started/dvwa.md"
         - "PHP-MySQL": "getting-started/php-mysql.md"
+    - "VM Security":
+      - "Agent Based":
+        - "Linux": "how-to/vm-security/agent-based/linux.md"
+        - "Windows": "how-to/vm-security/agent-based/windows.md"
+        - "Container Image Scanning": "how-to/vm-security/agent-based/container-image-scanning.md"
+      - "Agentless":
+        - "Cloud VM Scanning": "how-to/vm-security/agentless/cloud-vm-scanning.md"
     - "Application Security (ASPM)":
       - "Overview": "how-to/aspm-overview.md"
       - "DevSecOps" : "getting-started/devsecops.md"
