add single node onprem install guide + revise categories and probes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,6 +181,7 @@ nav:
     - "On-Premises":
         - "Overview": "getting-started/on-prem-overview.md"
         - "Installation Guide" : "getting-started/on-prem-installation-guide.md"
+        - "Single Node Installation": "getting-started/on-prem-single-node-installation.md"
         - "Security on OpenShift": "getting-started/security-on-openshift.md"
         - "Health Monitoring (RINC)": "how-to/RINC.md"
     - "Cloud Security (CSPM)":
